# mindjunkies

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
.scannerwork/: report-task.txt
config/: models.py
lecture/: views.py
mindjunkies/accounts/: models.py
mindjunkies/accounts/migrations/: 0001_initial.py
mindjunkies/courses/: admin.py  forms.py  models.py  urls.py  views.py
mindjunkies/courses/migrations/: 0001_initial.py  0002_lastvisitedcourse.py
mindjunkies/courses/templates/: course_token_form.html
mindjunkies/courses/templates/courses/: course_details.html  course_list.html  create_course.html  rate_course.html
mindjunkies/courses/templatetags/: courses_tags.py
mindjunkies/dashboard/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
mindjunkies/dashboard/migrations/: 0001_initial.py
mindjunkies/dashboard/templates/: dashboard.html  teacher_verification.html  verification_wait.html
mindjunkies/forums/: admin.py  forms.py  models.py  urls.py  views.py
mindjunkies/forums/migrations/: 0001_initial.py
mindjunkies/home/: urls.py  views.py
mindjunkies/home/templates/home/: card.html  (+1 more)
mindjunkies/home/tests/: test_views.py
mindjunkies/lecture/: admin.py  tests.py  urls.py  views.py
mindjunkies/lecture/migrations/: 0001_initial.py
mindjunkies/live_classes/: views.py
mindjunkies/live_classes/migrations/: 0001_initial.py
mindjunkies/live_classes/tests/: test_views.py
mindjunkies/payments/: models.py  views.py
mindjunkies/payments/migrations/: 0001_initial.py
mindjunkies/payments/tests/: test_models.py  test_views.py
mindjunkies/static/css/: forum.css
mindjunkies/templates/: base.html
mindjunkies/templates/includes/: header.html
project/: logging.py  settings.py  urls.py
scripts/: populate_course_categories.py
(+14 files in other folders)
